--- a/src/main/resources/resources/AddEditContact.fxml
+++ b/src/main/resources/resources/AddEditContact.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="599.0" type="VBox" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AddEditContactController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="599.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AddEditContactController">
    <children>
       <HBox prefHeight="44.0" prefWidth="599.0">
          <children>
@@ -99,4 +99,4 @@
    <padding>
       <Insets top="5.0" />
    </padding>
-</fx:root>
+</VBox>
