--- a/src/main/resources/resources/RubricaView.fxml
+++ b/src/main/resources/resources/RubricaView.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="823.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.RubricaViewController">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="823.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.RubricaViewController">
    <children>
       <Label style="-fx-font-size: 32;" text="Rubrica" />
       <TextField fx:id="searchBar" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="213.0" promptText="Ricerca Contatto">
